# CoffeeShop

./: README.md  analysis.ipynb  index.html  pyproject.toml  style.css
coffeeshop/: _toc.yml
coffeeshop/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
coffeeshop/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
coffeeshop/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
