[tool.poetry]
name = "coffeeshop"
version = "0.1.0"
description = ""
authors = ["Suvan Chatakondu <106794635+suvancha9866@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
